--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,11 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Long\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-file.reference.commons-codec-1.14.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\commons-codec-1.4.jar
-file.reference.log4j-1.2.17.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\log4j-1.2.17.jar
-file.reference.sqljdbc4.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\sqljdbc42.jar
-j2ee.server.domain=C:/Users/Long/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\AVITA\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.commons-codec-1.14.jar=C:\\Users\\AVITA\\Desktop\\commons-codec-1.4.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\AVITA\\Downloads\\DangVanHungSE141063\\log4j-1.2.17.jar
+file.reference.sqljdbc4.jar=C:\\Users\\AVITA\\Desktop\\sqljdbc4.jar
+j2ee.server.domain=C:/Users/AVITA/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/IExplorerBrowser
-user.properties.file=C:\\Users\\Long\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\AVITA\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
