--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,11 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-logging-1.2.jar=C:\\Users\\Long\\Desktop\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.12.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\fluent-hc-4.5.12.jar
+file.reference.gson-2.8.5.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\gson-2.8.5.jar
+file.reference.httpclient-4.5.12.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\httpclient-4.5.12.jar
+file.reference.httpcore-4.4.13.jar=E:\\FPT-University\\Th\u01b0 Vi\u1ec7n\\httpcore-4.4.13.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +52,12 @@ javac.classpath=\
     ${libs.jstl.classpath}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.commons-codec-1.14.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.httpclient-4.5.12.jar}:\
+    ${file.reference.fluent-hc-4.5.12.jar}:\
+    ${file.reference.httpcore-4.4.13.jar}:\
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
